--- a/frontend/filemanager/admin.html
+++ b/frontend/filemanager/admin.html
@@ -1,4 +1,4 @@
-<!--use:views/main-->
+<!--use:filemanager/main-->
 
 <!--define:css-->
 	<style type="text/css">
@@ -36,7 +36,7 @@
 
 <!--define:main-->
 
-	<!--include:views/promise/prompt-->
+	<!--include:filemanager/prompt-->
 
 	<div class="modal fade" id="filemanager_modal_admin">
 		<div class="modal-dialog modal-lg">
