--- a/frontend/main.html
+++ b/frontend/main.html
@@ -12,24 +12,24 @@
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		
-		<link rel="stylesheet" href="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/font-awesome/css/font-awesome.min.css" />
-		<link rel="stylesheet" href="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/jquery-ui/themes/base/jquery-ui.min.css" />
-		<link rel="stylesheet" href="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/trascender/main.css" />
+		<link rel="stylesheet" href="{{data:process.env.HOST}}/assets/lib/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="{{data:process.env.HOST}}/assets/lib/bower_components/font-awesome/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="{{data:process.env.HOST}}/assets/lib/bower_components/jquery-ui/themes/base/jquery-ui.min.css" />
+		<link rel="stylesheet" href="{{data:process.env.HOST}}/assets/lib/trascender/main.css" />
 		<!--define:head-->
 		
 	</head>
 	<body>
 		
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/jquery-ui/jquery-ui.min.js"></script>
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/bower_components/axios/dist/axios.min.js"></script>
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/moment.js"></script>
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/moment-with-locales.js"></script>
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/vue3.4.26.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/bower_components/jquery-ui/jquery-ui.min.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/bower_components/axios/dist/axios.min.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/moment.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/moment-with-locales.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/vue3.4.26.js"></script>
 	
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/trascender/global.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/trascender/global.js"></script>
 		<!--define:script-->
 				
 		<div id="app">
@@ -39,7 +39,7 @@
 			<!--define:main-->
 		</div>
 		
-		<script src="{{data:process.env.HOST_ARCHIVOSPUBLICOS}}/assets/lib/trascender/controladorV.js"></script>
+		<script src="{{data:process.env.HOST}}/assets/lib/trascender/controladorV.js"></script>
 		
 	</body>
 </html>
