--- a/frontend/filemanager/_.html
+++ b/frontend/filemanager/_.html
@@ -1,12 +1,12 @@
 <!--use:main-->
 
 <!--define:head-->
-	<link rel="stylesheet" href="filemanager/page/index/_.css" />
+	<link rel="stylesheet" href="filemanager/_.css" />
 <!--/define:head-->
 
 <!--define:script-->
 
-	<script src="filemanager/page/index/_.js"></script>
+	<script src="filemanager/_.js"></script>
 	
 <!--/define:script-->
 
