--- a/frontend/main.html
+++ b/frontend/main.html
@@ -32,7 +32,7 @@
 				
 		<div id="app">
 			<div id="loader" v-show="loader">
-				<i class="fa fa-spin fa-spinner"></i>
+				<i class="fa fa-spin fa-spinner"></i> {{loader_msg}}
 			</div>
 			<!--define:main-->
 		</div>
