--- a/frontend/main.html
+++ b/frontend/main.html
@@ -31,8 +31,8 @@
 		<!--define:script-->
 				
 		<div id="app">
-			<div id="loader" v-show="loader">
-				<i class="fa fa-spin fa-spinner"></i> {{loader_msg}}
+			<div id="loader" v-show="loader.active">
+				<i class="fa fa-spin fa-spinner"></i> {{loader.title}}
 			</div>
 			<!--define:main-->
 		</div>
